Fix reviews slider cropping

--- a/src/sass/components/_reviews-slider.sass
+++ b/src/sass/components/_reviews-slider.sass
@@ -5,6 +5,7 @@ $review-slider-main-item-padding-horizontal: $vertical-gutter * 4
   background: $black
 
 .reviews-slider-main-item
+  height: 100%
   padding: $vertical-gutter
   +breakpoint(medium)
     padding:
